0.9.52
- Fix for busy spinner on home screen
- Clock to music vis
- Fix for always on osd info to not show when seeking

0.9.51
- Add fanart gallery fullscreen viewer
- Add Icon wall to programs
- Fix TMDbHelper info in OSD
- Fix for too long studio/language tags
- Fix for too long filepath
- Fixed movement option for widgets
- Add banner widget type

0.9.50
- Fix for small landscape and small square widget text
- Fix for old v6 of next aired
- Fix for alphabet strip wrap-around
- Add new TMDb Helper function for select list of queried items

0.9.49
- Fix OSD covering subtitles when adjusting offset
- Fix default showcase starrating (not imdb)
- Add LibreELEC and CoreELEC setting options
- Improve notification visibility
- Add now finish time for 6button remotes
- Add extendedprogress to basic home
- Add addonnews to addoninfo plotbox

0.9.48
- Options for info in pvr guide
- Options for channel numbers in slim pvr guide
- Addition of top menu in pvr guide
- Add quick jump for PVR
- Add title labels to pvr widgets
- Fixes for landscape pvr widget icons
- Seek numeric and pvr channel seek
- Update playerprocessinfo
- Fix for browse/play in info for plugins

0.9.47
- NextAired view options
- Episode widgets use tvshow not season posters
- Kiosk mode
- Lengthen fixed-width horizontal home menu when clock is disabled
- FromDirector sortby=year
- Fix missing scrollbars
- Fix music osd rating
- Fix for colorbox settings
- Fix for TMDb helper mouse issue
- Make music vis respect timeperimage var

0.9.46
- Add blur effect settings
- Add Up Next support
- Add Next Aired 7.0.1 support
- Corner icon choices for fixed width horizontal menus
- Seekbar dot color 

0.9.45
- Updates to Sets info
- Show dbid indicator in sets
- Change container.content checks in info to ListItem.DBType checks

0.9.44
- Fix for plot overlay auto display
- Remove extendedinfo completely
- Update submenu hubs to new widget styles
- Remove labels from aura showcase views