@@ -446,7 +446,7 @@
                 <param name="viewtype" value="$LOCALIZE[31358]" />
                 <param name="viewtypename" value="icon" />
                 <param name="forced" value="true" />
-                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(actors)" />
+                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(actors) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <include>View_Vertical_Movement</include>
             </include>
         </control>
@@ -465,7 +465,7 @@
                 <param name="viewtypename" value="icon" />
                 <param name="diffuse" value="diffuse/square-wall.png" />
                 <param name="forced" value="true" />
-                <param name="visible" value="Container.Content(artists) | Container.Content(albums) | Container.Content(games) | Container.Content(programs) | Container.Content(addons) | Container.Content(images) | Container.Content() | Container.Content(files)" />
+                <param name="visible" value="Container.Content(artists) | Container.Content(albums) | Container.Content(games) | Container.Content(programs) | Container.Content(addons) | Container.Content(images) | Container.Content() | Container.Content(files) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <include>View_Vertical_Movement</include>
             </include>
         </control>
@@ -488,7 +488,7 @@
                 <param name="viewtypename" value="wide" />
                 <param name="forced" value="true" />
                 <param name="labelinclude" value="View_51_Wall_Landscape_Label" />
-                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(episodes) | Container.Content(videos) | Container.Content(images)" />
+                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(episodes) | Container.Content(videos) | Container.Content(images) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <include>View_Vertical_Movement</include>
             </include>
         </control>
@@ -508,7 +508,7 @@
                 <param name="viewtype" value="$LOCALIZE[31424]" />
                 <param name="viewtypename" value="icon" />
                 <param name="forced" value="true" />
-                <param name="visible" value="Container.Content(genres) | Container.Content(countries) | Container.Content(directors) | Container.Content(studios) | Container.Content(years) | Container.Content() | Container.Content(addons)" />
+                <param name="visible" value="Container.Content(genres) | Container.Content(countries) | Container.Content(directors) | Container.Content(studios) | Container.Content(years) | Container.Content() | Container.Content(addons) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <include>View_Vertical_Movement</include>
             </include>
         </control>
@@ -554,7 +554,7 @@
                 <param name="viewtypename" value="icon" />
                 <param name="controllayout" value="View_514_Wall_Info_Layout" />
                 <param name="forced" value="true" />
-                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons)" />
+                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <width>1028.56</width>
                 <include>View_Vertical_Movement</include>
             </include>
@@ -585,7 +585,7 @@
                 <param name="viewtypename" value="wide" />
                 <param name="forced" value="true" />
                 <param name="labelinclude" value="Defs_Null" />
-                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(episodes) | Container.Content(videos) | Container.Content(images)" />
+                <param name="visible" value="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(episodes) | Container.Content(videos) | Container.Content(images) | $EXP[Exp_IsPluginAdvancedLauncher]" />
                 <include>View_Vertical_Movement</include>
             </include>
         </control>
