@@ -4,7 +4,7 @@
     <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
     
-    <views>50,500,510,512</views>
+    <views>50,500,501,502,504,503,51,510,511,512,513,514,515,52,520,521,522,524,53,523</views>
     
     <controls>
         <include>Global_Background</include>
@@ -14,9 +14,24 @@
             <include>Animation_FadeInOut</include>
             <include>View_50_List</include>
             <include>View_500_List_Square</include>
+            <include>View_501_List_MediaInfo</include>
+            <include>View_502_List_MediaInfo_Extended</include>
+            <include>View_503_List_Banners</include>
+            <include>View_504_List_TriPanel</include>
+            <include>View_51_Wall</include>
             <include>View_510_Wall_Square</include>
+            <include>View_511_Wall_Landscape</include>
             <include>View_512_Wall_Icons</include>
-            <include>Object_Scrollbars</include>
+            <include>View_513_Wall_Circle</include>
+            <include>View_514_Wall_Info</include>
+            <include>View_515_Wall_Landscape_Small</include>
+            <include>View_52_Showcase</include>
+            <include>View_520_Showcase_Square</include>
+            <include>View_521_Showcase_Landscape</include>
+            <include>View_522_Showcase_Seasons</include>
+            <include>View_523_Showcase_Lovefilm</include>
+            <include>View_524_Showcase_Seasons</include>
+            <include>View_53_Poster</include>
         </control>
         
         <control type="list" id="300">
