@@ -2,6 +2,7 @@
 - Fix for busy spinner on home screen
 - Clock to music vis
 - Fix for always on osd info to not show when seeking
+- Allow AEL views.
 
 0.9.51
 - Add fanart gallery fullscreen viewer
